--- a/src/app/features/po/po-documents/po-documents.component.html
+++ b/src/app/features/po/po-documents/po-documents.component.html
@@ -1,9 +1,14 @@
-<div class="row" *ngIf="mode === 'edit'">
+<div class="row">
   <mat-card class="example-card">
     <mat-card-header class="upload-documents-mat-header">
-      <span class="text-semi-bold">
+      <span class="text-semi-bold" *ngIf="mode === 'edit'; else elseBlock">
         <app-upload #uploadRef [documentListLength]="documentListLength" (onFileUpdate)="fileUpdate($event)"> </app-upload>
       </span>
+      <ng-template #elseBlock>
+        <span class="col-xs-12 text-align-center">
+          Download Document
+        </span>
+      </ng-template>
     </mat-card-header>
     <mat-card-content>
       <mat-list class="pt-10">
@@ -11,12 +16,12 @@
           <mat-list-item class="files-list" *ngFor="let file of documentData; let i = index">
             <!-- <mat-icon>file_copy</mat-icon> -->
             <img class="file-icon" src="../../../../assets/images/file-doc.png" />
-            <span>{{ file.documentName }}</span>
-            <button type="button" (click)="openFileUrl(i)" mat-icon-button>
+            <span>{{ file.DocumentDesc }}</span>
+            <a type="button" target="_blank" [href]="file.DocumentUrl" mat-icon-button>
               <i class="material-icons">
                 remove_red_eye
               </i>
-            </button>
+            </a>
           </mat-list-item>
         </span>
         <span *ngIf="mode === 'edit'">
