--- a/src/app/features/global-store/material-wise/material-wise.component.html
+++ b/src/app/features/global-store/material-wise/material-wise.component.html
@@ -16,6 +16,7 @@
     <span class="mat-header-cell" mat-sort-header="requiredDate">Required Date</span>
     <span class="mat-header-cell" mat-sort-header="availableQuantity">Available quantity in project</span>
   </section>
+<div class="global-panel">
   <mat-expansion-panel *ngFor="let material of newMaterialData | SearchPipe: searchMaterial:'GlobalMaterial':'materialName'" class="myPanel">
     <mat-expansion-panel-header class="mat-row material-row">
       <span class="mat-cell" matTooltip="{{ material.GlobalMaterial.materialName }}">
@@ -60,4 +61,5 @@
       </div>
     </mat-expansion-panel>
   </mat-expansion-panel>
+</div>
 </mat-accordion>
