--- a/src/app/features/po/initiate-po/po-project-material/po-project-material.component.html
+++ b/src/app/features/po/initiate-po/po-project-material/po-project-material.component.html
@@ -11,7 +11,7 @@
   <div class="row p-b-10">
     <div class="col-sm-12">
       <mat-form-field class="border-select pull-right m-r-25 custom-po-radio">
-        <mat-select formControlName="selectedProject" (selectionChange)="choosenProject($event)">
+        <mat-select formControlName="selectedProject" placeholder="Search project Name" (selectionChange)="choosenProject($event)">
           <div class="display-flex">
             <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search project Name" [(ngModel)]="searchText" [ngModelOptions]="{standalone: true}" />
             <button mat-button matSuffix mat-icon-button>
