--- a/src/app/features/po/po-documents/po-documents.component.html
+++ b/src/app/features/po/po-documents/po-documents.component.html
@@ -1,18 +1,16 @@
 <div class="row">
-  <mat-card class="example-card">
+  <mat-card class="width96Percent border-radius">
     <mat-card-header class="upload-documents-mat-header">
       <span class="text-semi-bold" *ngIf="mode === 'edit'; else elseBlock">
         <app-upload #uploadRef [documentListLength]="documentListLength" (onFileUpdate)="fileUpdate($event)"> </app-upload>
       </span>
-      <ng-template #elseBlock>
-        <span class="col-xs-12 text-align-center">
-          Download Document
-        </span>
-      </ng-template>
+      <span *ngIf="mode !== 'edit'" class="col-xs-12 text-align-center text-semi-bold">
+        View Document
+      </span>
     </mat-card-header>
     <mat-card-content>
       <mat-list class="pt-10">
-        <span *ngIf="mode != 'edit'">
+        <span *ngIf="mode != 'edit' && documentData">
           <mat-list-item class="files-list" *ngFor="let file of documentData; let i = index">
             <!-- <mat-icon>file_copy</mat-icon> -->
             <img class="file-icon" src="../../../../assets/images/file-doc.png" />
@@ -22,6 +20,13 @@
                 remove_red_eye
               </i>
             </a>
+          </mat-list-item>
+        </span>
+        <span *ngIf="mode != 'edit' && !documentData">
+          <mat-list-item>
+            <div class="col-xs-12 text-align-center">
+              No files to preview
+            </div>
           </mat-list-item>
         </span>
         <span *ngIf="mode === 'edit'">
