--- a/src/app/features/rfq/project-materials/project-materials.component.html
+++ b/src/app/features/rfq/project-materials/project-materials.component.html
@@ -45,38 +45,30 @@
     </div>
     <div class="row p-b-10">
       <div class="col-sm-12">
-        <button [disabled]="!projects.value.length" mat-raised-button (click)="setSelectedProjectList()"
-          class="main-background-color main-button color-white pull-right m-t-15">
+        <button [disabled]="!projects.value.length" mat-raised-button (click)="setSelectedProjectList()" class="main-background-color main-button color-white pull-right m-t-15">
           Add
         </button>
         <mat-form-field class="border-select pull-right m-r-25">
           <mat-select [formControl]="projects" [(ngModel)]="selectedProjects" multiple>
             <div class="display-flex">
-              <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search project Name"
-                [(ngModel)]="searchText" />
+              <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search project Name" [(ngModel)]="searchText" />
               <button mat-button matSuffix mat-icon-button>
                 <mat-icon>search</mat-icon>
               </button>
             </div>
-            <mat-option *ngFor="
-                let project of allProjects
-                  | SearchPipe: searchText:'projectName'
-              " [value]="project">{{ project.projectName }}
-            </mat-option>
+            <mat-option *ngFor="let project of allProjects | SearchPipe: searchText:'projectName'" [value]="project">{{ project.projectName }} </mat-option>
           </mat-select>
         </mat-form-field>
       </div>
     </div>
 
     <div class="rfq-detail-body">
-      <!-- table structure -->
-
       <ng-template ngFor let-material [ngForOf]="rfqDetails" let-i="index">
         <mat-expansion-panel class="myPanel" [expanded]="true">
           <mat-expansion-panel-header>
             <mat-panel-title>
-              {{material.projectName}}
-              <a href="javascript:void(0)" class="main-color p-l-15">{{material.defaultAddress.addressLine1}}</a>
+              {{ material.projectName }}
+              <a href="javascript:void(0)" class="main-color p-l-15">{{ material.defaultAddress.addressLine1 }}</a>
             </mat-panel-title>
           </mat-expansion-panel-header>
           <table mat-table [dataSource]="material.projectMaterialList" class="mat-elevation-z8 col-sm-12">
@@ -84,14 +76,13 @@
               <th mat-header-cell *matHeaderCellDef>Material Name</th>
               <td mat-cell *matCellDef="let element">
                 <mat-checkbox (change)="element.checked = !element.checked" [checked]="element.checked">
-                  {{ element.materialName }} <br>
+                  {{ element.materialName }} <br />
                   <span class="category-name">
-                    {{ element.materialGroup}}
+                    {{ element.materialGroup }}
                   </span>
                 </mat-checkbox>
               </td>
             </ng-container>
-
 
             <ng-container matColumnDef="Required Date">
               <th mat-header-cell *matHeaderCellDef>Required Date</th>
@@ -122,7 +113,7 @@
 
           <!-- end table part -->
         </mat-expansion-panel>
-        <br>
+        <br />
       </ng-template>
 
       <!-- end table structure -->
