Add, Edit and delete project refresh done and user pic show Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/users/user-details/user-details.component.html
+++ b/src/app/features/users/user-details/user-details.component.html
@@ -1,6 +1,6 @@
 <div class="page-start-point">
 
-<ng-container *ngIf="!dataSourceActivateTemp.length && !dataSourceDeactivateTemp.length">
+<ng-container *ngIf="(dataSourceActivateTemp==null || dataSourceActivateTemp.length == 0) && (dataSourceDeactivateTemp==null || dataSourceDeactivateTemp.length == 0)">
    <div class="p-l-20 p-r-20 p-b-20 min-height parent wrapper-btn-center">
      <div class="add-user-img">
           <img src="../../../../assets/images/user-background.png" alt="BuildSupply_Logo">
