create BOM and small bugs fixed

--- a/src/app/features/users/add-user/add-user.component.html
+++ b/src/app/features/users/add-user/add-user.component.html
@@ -7,7 +7,7 @@
                         <div class="row">
 
                             <div class="col-md-12">
-                                <h3 class="user-profile text-center text-uppercase pt-2 pb-4">Add User</h3>
+                                <h3 class="user-profile text-center text-uppercase pt-2 pb-4">Invite User</h3>
                             </div>
                         </div>
 
