--- a/src/app/shared/layout/header/header.html
+++ b/src/app/shared/layout/header/header.html
@@ -4,7 +4,7 @@
       <button mat-icon-button (click)="onToggleSidenav()" fxShow="true" fxHide.gt-sm>
         <mat-icon>menu</mat-icon>
       </button>
-      <span><img height="38" width="200" src="../../../../assets/images/loginLogo.png" alt="logo" /></span>
+      <span><img width="200" src="../../../../assets/images/loginLogo.png" alt="logo" /></span>
       <span class="menu-spacer"></span>
       
     <button  class="pull-right p-t-10"
