--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -20,3 +20,4 @@
     @import "./pages/signin-signup.scss";
     @import "./layout/loader.scss";
     @import "./pages/indent.scss";
+    @import "./pages/select-project.scss";
