--- a/src/assets/scss/pages/signin-signup.scss
+++ b/src/assets/scss/pages/signin-signup.scss
@@ -35,7 +35,7 @@
 }
 
 .logo-img{
-    height: 40px;
+    width: 250px;
 }
 
 .mat-tab-group.mat-primary .mat-ink-bar, .mat-tab-nav-bar.mat-primary .mat-ink-bar{
