--- a/src/app/shared/dialogs/select-project/select-project.component.html
+++ b/src/app/shared/dialogs/select-project/select-project.component.html
@@ -18,7 +18,8 @@
 
                         <p class="mb-0 select-project__name">{{ project.projectName }}</p>
                         <p class="mb-0 select-project__location d-flex align-items-center">
-                            <i class="material-icons mr-2">location_on</i>
+                            <!-- <i class="material-icons mr-2">location_on</i> -->
+                            <img src="assets/images/location-icon.png" class="img-fluid mr-2" alt="Location Icon">
                             <span>{{ project.addressLine1}}, {{ project.addressLine2 }}</span>
                         </p>
 
