--- a/src/app/features/app-dashboard/app-dashboard.component.html
+++ b/src/app/features/app-dashboard/app-dashboard.component.html
@@ -53,7 +53,7 @@
                 <div class="statistics bg-white p-4 mb-4">
                     <div class="row">
                         <div class="col-md-12 d-flex justify-content-between">
-                            <mat-tab-group class="mat-tabs-button">
+                            <mat-tab-group class="mat-tabs-button" (selectedTabChange)="onTabChanged($event);">
                                 <mat-tab label="Purchase Order">
                                     <div class="statistics__purchase-order d-flex">
                                         <div class="statistics__tile stats d-flex justify-content-between align-items-center mr-3">
