--- a/src/app/shared/components/project-item/project-item.component.html
+++ b/src/app/shared/components/project-item/project-item.component.html
@@ -55,12 +55,12 @@
               <!-- <a href="javascript:void(0)"
                 ><i class="material-icons main-color">file_copy</i></a
               > -->
-              <a *ngIf="(!disableEditDelete) && permissionObj.projectEdit" class="width-17-px p-l-10 p-r-10 cursor-pointer"  matTooltip="Edit Project"
+              <a *ngIf="(!disableEditDelete) && permissionObj.projectEdit" class="width-17-px p-l-10 p-r-10 cursor-pointer edit-project"  matTooltip="Edit Project"
                 (click)="edit(projectDetails.projectId, $event)">
                 <img src="../../../../assets/images/edit.png">
               </a>
 
-              <a *ngIf="(!disableEditDelete) && permissionObj.projectEdit" class="width-15-px p-l-10 p-r-10 cursor-pointer"  matTooltip="Delete Project"
+              <a *ngIf="(!disableEditDelete) && permissionObj.projectEdit" class="width-15-px p-l-10 p-r-10 cursor-pointer delete-project"  matTooltip="Delete Project"
                 (click)="delete(projectDetails.projectId, $event)">
                 <img src="../../../../assets/images/delete-button.png">
               </a>
