--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -40,7 +40,7 @@
       <div class="text-right col-xs-6">
         <button
           mat-raised-button
-          class="main-background-color main-button color-white"
+          class="main-background-color main-button color-white demo-title"
           (click)="addProject()"
         >
           + Add Project
