--- a/src/app/features/rfq/ref-detail/ref-detail.component.html
+++ b/src/app/features/rfq/ref-detail/ref-detail.component.html
@@ -1,5 +1,25 @@
 <div class="page-start-point">
-  <div class="p-l-20 p-r-20 p-b-20 min-height parent">
+    <div *ngIf="!submittedRfqListTemp && !nonSubmittedRfqListTemp" class="parent min-height">
+   <div class="p-l-20 p-r-20 p-b-20 min-height parent wrapper-btn-center">
+     <div class="add-user-img">
+          <img src="../../../../assets/images/rfq-details.png" alt="Project Logo">
+             <div>
+                  <p>
+                    You haven't created any RFQ yet. <br>
+                    Please create one to continue.
+                  </p>
+            </div>
+        </div>
+       
+        <button  mat-raised-button   [routerLink]="['../../rfq/createRfq']" class="main-background-color main-button color-white">
+              Create RFQ
+            </button>
+  </div> 
+ 
+  </div>
+
+
+  <div class="p-l-20 p-r-20 p-b-20 min-height parent" *ngIf="submittedRfqListTemp || nonSubmittedRfqListTemp">
 
     <div class="row">
       <div class="col-xs-12">
