--- a/src/app/features/rfq/review/review.component.html
+++ b/src/app/features/rfq/review/review.component.html
@@ -88,7 +88,7 @@
               <ng-container matColumnDef="Makes">
                 <th mat-header-cell *matHeaderCellDef>Makes</th>
                 <td mat-cell *matCellDef="let element">
-                  <ng-container *ngIf="element.makes.length">
+                  <ng-container *ngIf="element.makes">
                     <span class="brand-view-style m-r-5" *ngFor="let make of element.makes">
                       {{ make }}
                     </span>
