--- a/src/app/shared/components/project-item/project-item.component.html
+++ b/src/app/shared/components/project-item/project-item.component.html
@@ -87,9 +87,8 @@
                       0
                     </span>
                   </div>
-                  <div class="font-size12 p-l-15">
-                    All<br />
-                    Materials
+                  <div class="font-size12 p-l-15 p-t-5">
+                    All Materials
                   </div>
                 </div>
                 <div class="col-sm-4 box-custom color-text-card p-t-10  display-flex"
@@ -104,9 +103,8 @@
                     </span>
 
                   </div>
-                  <div class="font-size12 p-l-15">
-                    Open<br />
-                    Indents
+                  <div class="font-size12 p-l-15 p-t-5">
+                    Open Indents
                   </div>
                 </div>
                 <span class="col-sm-4">
@@ -120,15 +118,17 @@
                         0
                       </span>
                     </div>
-                    <div class="font-size12 color-text-card p-l-15">
-                      Purchase<br />
-                      Orders
-                    </div>
-                    <div class="font-size14 purchase-amount text-right p-l-25 m-t-15">
-                      <span *ngIf="projectDetails.purchaseOrderCost">
+                    <div class="font-size12 color-text-card p-l-15 p-t-5">
+                      Purchase Orders <br>
+                      <span class="font-size14 purchase-amount" *ngIf="projectDetails.purchaseOrderCost">
                         ₹{{ projectDetails.purchaseOrderCost  | number : '1.2-2' }} Cr
                       </span>
                     </div>
+                    <!-- <div class="font-size14   text-right p-l-25 m-t-15">
+                      <span *ngIf="projectDetails.purchaseOrderCost">
+                        ₹{{ projectDetails.purchaseOrderCost  | number : '1.2-2' }} Cr
+                      </span>
+                    </div> -->
                   </div>
                 </span>
               </div>
@@ -143,7 +143,7 @@
               </div>
             </div>
             <div class="col-xs-6 text-right">
-              <button mat-raised-button class="background-white-color main-button main-color" *ngIf="url==='/dashboard'"
+              <button mat-raised-button class="background-white-color main-button main-color" *ngIf="url==='/project-dashboard'"
                 (click)="navigationToBOM(projectDetails.projectId, projectDetails)">View Project</button>
             </div>
           </div>
