--- a/src/app/features/app-dashboard/app-dashboard.component.html
+++ b/src/app/features/app-dashboard/app-dashboard.component.html
@@ -9,7 +9,7 @@
                             <div class="things-to-do__img">
                                 <img src="assets/images/icon5.png" alt="" class="img-fluid">
                             </div>
-                            <h6 class="mt-3 mb-0">Add Projects</h6>
+                            <h6 class="mt-3 mb-0">Add Project</h6>
                         </div>
 
                         <div class="things-to-do__icons text-center cursor" (click)="openBomDialog()">
@@ -78,7 +78,7 @@
                                     </div>
                                 </mat-tab>
 
-                                <mat-tab label="Request for Quotations">
+                                <mat-tab label="Request for Quotation">
                                     <div class="statistics__purchase-order d-flex">
                                         <div class="statistics__tile stats d-flex justify-content-between align-items-center mr-3">
                                             <div class="stats__icon">
@@ -189,7 +189,7 @@
                             </div>
                             <div class="project-tile__content">
                                 <h2 class="mb-1">{{ projectCount }}</h2>
-                                <p class="mb-0">Total number of project</p>
+                                <p class="mb-0">Total number of projects</p>
                             </div>
                         </div>
                     </div>
