--- a/src/app/features/app-dashboard/app-dashboard.component.html
+++ b/src/app/features/app-dashboard/app-dashboard.component.html
@@ -78,7 +78,7 @@
                                     </div>
                                 </mat-tab>
 
-                                <mat-tab label="Request for Quotation">
+                                <mat-tab label="Request for Quotations">
                                     <div class="statistics__purchase-order d-flex">
                                         <div class="statistics__tile stats d-flex justify-content-between align-items-center mr-3">
                                             <div class="stats__icon">
