--- a/src/app/features/app-dashboard/app-dashboard.component.html
+++ b/src/app/features/app-dashboard/app-dashboard.component.html
@@ -5,35 +5,35 @@
                 <div class="things-to-do bg-white p-4 mb-4">
                     <h5 class="mb-3">Things to do</h5>
                     <div class="things-to-do__inner d-flex justify-content-between align-items-center">
-                        <div class="things-to-do__icons text-center cursor" (click)="openProject()">
+                        <div class="things-to-do__icons text-center cursor" (click)="openProject()" matTooltip="Add Project">
                             <div class="things-to-do__img">
                                 <img src="assets/images/icon5.png" alt="" class="img-fluid">
                             </div>
                             <h6 class="mt-3 mb-0">Add Project</h6>
                         </div>
 
-                        <div class="things-to-do__icons text-center cursor" (click)="openBomDialog()">
+                        <div class="things-to-do__icons text-center cursor" (click)="openBomDialog()" matTooltip="Create BOM">
                             <div class="things-to-do__img">
                                 <img src="assets/images/icon4.png" alt="" class="img-fluid">
                             </div>
                             <h6 class="mt-3 mb-0">Create BOM</h6>
                         </div>
 
-                        <div class="things-to-do__icons text-center cursor" [routerLink]="['/rfq/createRfq']" routerLinkActive="router-link-active" >
+                        <div class="things-to-do__icons text-center cursor" [routerLink]="['/rfq/createRfq']" matTooltip="Create RFQ">
                             <div class="things-to-do__img">
                                 <img src="assets/images/icon6.png" alt="" class="img-fluid">
                             </div>
                             <h6 class="mt-3 mb-0">Create RFQ</h6>
                         </div>
 
-                        <div class="things-to-do__icons text-center cursor" [routerLink]="['/globalStore/'+orgId]" routerLinkActive="router-link-active" >
+                        <div class="things-to-do__icons text-center cursor" [routerLink]="['/globalStore/'+orgId]" matTooltip="Global Store">
                             <div class="things-to-do__img">
                                 <img src="assets/images/icon2.png" alt="" class="img-fluid">
                             </div>
                             <h6 class="mt-3 mb-0">Global Store</h6>
                         </div>
 
-                        <div class="things-to-do__icons text-center cursor" [routerLink]="['/po/initiate-po']" routerLinkActive="router-link-active" >
+                        <div class="things-to-do__icons text-center cursor" [routerLink]="['/po/initiate-po']" matTooltip="Create Purchase Order">
                             <div class="things-to-do__img">
                                 <img src="assets/images/icon1.png" alt="" class="img-fluid">
                             </div>
