--- a/src/assets/scss/pages/dashboard.scss
+++ b/src/assets/scss/pages/dashboard.scss
@@ -204,3 +204,6 @@ body, .bg-gray, .mat-drawer-content{
 .cursor{
   cursor: pointer;
 }
+.things-to-do__icons:hover{
+  box-shadow: 0px 0px 10px -1px rgba(0, 0, 0, 0.9);
+}
