--- a/src/app/features/app-dashboard/app-dashboard.component.html
+++ b/src/app/features/app-dashboard/app-dashboard.component.html
@@ -71,7 +71,7 @@
                                                 <img src="assets/images/po-amount-icon.png" alt="Awarded PO Amount" class="img-fluid">
                                             </div>
                                             <div class="stats__content">
-                                                <h2 class="mb-1">{{ poData?.totalValue | number : '1.2-2' }}</h2>
+                                                <h2 class="mb-1">{{ poData?.totalValue }}</h2>
                                                 <p class="mb-0">Awarded PO Amount</p>
                                             </div>
                                         </div>
